log
Wed 27 Mar 2024 08:25:52 PM UTC: 
 tests:  0|6
total_score: 0/70
65a6181
Wed 27 Mar 2024 08:28:26 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c:37:6: error: expected identifier or ‘(’ before ‘return’
   37 |      return NULL;
      |      ^~~~~~
list.c:38:1: error: expected identifier or ‘(’ before ‘}’ token
   38 | }
      | ^
Compilation failed
36462aa
Wed 27 Mar 2024 08:28:37 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:
list.c:34:6: error: expected identifier or ‘(’ before ‘return’
   34 |      return NULL;
      |      ^~~~~~
list.c:35:1: error: expected identifier or ‘(’ before ‘}’ token
   35 | }
      | ^
list.c: In function ‘createList’:
list.c:33:1: error: control reaches end of non-void function [-Werror=return-type]
   33 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f01377f
Wed 27 Mar 2024 08:28:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2e83d97
Wed 27 Mar 2024 08:29:01 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
64a5195
Wed 27 Mar 2024 08:31:40 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
4fa25df
Wed 27 Mar 2024 08:35:30 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
325919d
Wed 27 Mar 2024 08:37:29 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/70
a14f4f4
Wed 27 Mar 2024 08:39:48 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  5|4
total_score: 25/70
4da73d4
Wed 27 Mar 2024 08:40:14 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  6|4
total_score: 25/70
be9fc13
Wed 27 Mar 2024 08:41:05 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  9|3
total_score: 35/70
f7d4ad8
Wed 27 Mar 2024 08:42:00 PM UTC: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
list.c:112:5: error: expected identifier or ‘(’ before ‘}’ token
  112 |     }
      |     ^
list.c:113:1: error: expected identifier or ‘(’ before ‘}’ token
  113 | }
      | ^
Compilation failed
a38774d
Wed 27 Mar 2024 08:42:07 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
0d3e360
Wed 27 Mar 2024 08:45:31 PM UTC: 
 list.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  10|2
total_score: 45/70
5945a9d
Wed 27 Mar 2024 08:46:44 PM UTC: 
 list.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  10|2
total_score: 45/70
941b20c
